2000-03-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* continuations.h (SCM_CONTREGS, SCM_SET_CONTREGS):  New macros to
	access continuation data.

	(SCM_SETJMPBUF):  Deprecated.  Use SCM_SET_CONTREGS instead.

	(SCM_JMPBUF, SCM_DYNENV, SCM_THROW_VALUE, SCM_BASE, SCM_SEQ,
	SCM_DFRAME):  Use SCM_CONTREGS instead of SCM_CHARS to access
	continuation data.

	* continuations.c (scm_make_cont), init.c (start_stack), 
	root.c (scm_internal_cwdr):  Use SCM_SET_CONTREGS instead of
	SCM_SETJMPBUF.

2000-03-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* symbols.h (SCM_LENGTH, SCM_SETLENGTH):  Access the length field
	of strings and symbols by using SCM_{SET_}?CELL_WORD_0.

	(SCM_CHARS, SCM_UCHARS, SCM_SETCHARS):  Use SCM_{SET_}?CELL_WORD_1
	to access the char * field of strings and symbols.

2000-03-27  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.h (SCM_NEWCELL, SCM_NEWCELL2):  Use SCM_SET_CELL_TYPE to set
	the type entry of a new cell.  Added a comment about things to
	remember when updating the list of free cells.

	(SCM_FREEP, SCM_MARKEDP):  Use SCM_CELL_TYPE to access the type
	entry of a cell.

2000-03-27  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* pairs.h (SCM_CAR, SCM_CDR, SCM_SETCAR, SCM_SETCDR):  Use
	SCM_CELL_OBJECT and SCM_SET_CELL_OBJECT.  This change implies that
	with strict type checking enabled these macros will only work if
	given valid SCM parameters.

	(SCM_GCCDR):  Moved to tags.h.

	* tags.h (SCM_GCCDR):  Moved here from pairs.h.

2000-03-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tags.h (SCM2PTR, PTR2SCM):  Moved to gc.h.

	* pairs.h (scm_cell, SCM_CELLPTR, SCM_CELL_WORD*, SCM_CELL_OBJECT*,
	SCM_SET_CELL_WORD*, SCM_SET_CELL_OBJECT*, SCM_CELL_TYPE,
	SCM_SET_CELL_TYPE, SCM_PTR_LT, SCM_PTR_MASK, SCM_PTR_GT,
	SCM_PTR_LE, SCM_PTR_GE, SCM_CELL_WORD_LOC, SCM_NEWCELL,
	SCM_NEWCELL2): 	Moved to gc.h.

	(SCM_CARLOC, SCM_CDRLOC, SCM_SETAND_CAR, SCM_SETAND_CDR,
	SCM_SETOR_CAR, SCM_SETOR_CDR):  Moved to gc.h.  These names should